GateKeeperV3/excludeNamespaces/container-resource-limits/constraint-static-2.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAzureContainerLimits
metadata:
  name: container-limits-static-2
spec:
  enforcementAction: dryrun
  match:
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    cpuLimit : 50m
    memoryLimit: 50Mi
