GateKeeperV3/excludeNamespaces/container-resource-limits/constraint-static.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAzureContainerLimits
metadata:
  name: container-limits-static
spec:
  enforcementAction: dryrun
  excludedNamespaces:
    - kube-system
    - azure-arc
    - gatekeeper-system
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    cpuLimit : 50m
    memoryLimit: 50Mi
